--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 5000
 MONGODB_URI = "mongodb://localhost:27017"
+ACCESS_TOKEN_SECRET = "merarandomsasecret"
+ACCESS_TOKEN_SECRET_EXPIRE = "1d"
+REFRESH_TOKEN_SECRET = "merarandomsasecret"
+REFRESH_TOKEN_SECRET_EXPIRE = "7d"
