file upload using clodinary and multer done

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ ACCESS_TOKEN_SECRET = "merarandomsasecret"
 ACCESS_TOKEN_SECRET_EXPIRE = "1d"
 REFRESH_TOKEN_SECRET = "merarandomsasecret"
 REFRESH_TOKEN_SECRET_EXPIRE = "7d"
+
+CLOUDINARY_CLOUD_NAME = "meTube"
+CLOUDINARY_API_KEY = "636213663725777"
+CLOUDINARY_API_SECRET = "70j_k4SA0UqSV8AepHbDb-u6hdk"
